--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -10,6 +10,7 @@
 <body class="bg-gray-100">
     <div class="min-h-screen p-8">
         <div class="max-w-7xl mx-auto">
+            <!-- Header -->
             <div class="flex justify-between items-center mb-6">
                 <h1 class="text-3xl font-bold">Dashboard Rapporti</h1>
                 <div class="space-x-4">
@@ -19,6 +20,7 @@
                 </div>
             </div>
 
+            <!-- Filters -->
             <div class="mb-6 flex gap-4">
                 <select id="typeFilter" class="border rounded p-2">
                     <option value="all">Tutti i tipi</option>
@@ -33,6 +35,7 @@
                 </button>
             </div>
 
+            <!-- Table -->
             <div class="bg-white rounded-lg shadow overflow-x-auto">
                 <table class="min-w-full">
                     <thead class="bg-gray-50">
@@ -45,17 +48,23 @@
                         </tr>
                     </thead>
                     <tbody id="reportsTable" class="bg-white divide-y divide-gray-200">
+                        <!-- Data will be populated here -->
                     </tbody>
                 </table>
             </div>
         </div>
     </div>
 
+    <!-- Modal for viewing details -->
     <div id="detailsModal" class="hidden fixed inset-0 bg-gray-600 bg-opacity-50 overflow-y-auto h-full w-full">
         <div class="relative top-20 mx-auto p-5 border w-96 shadow-lg rounded-md bg-white">
-            <div id="modalContent" class="mt-3"></div>
+            <div id="modalContent" class="mt-3">
+                <!-- Modal content will be populated here -->
+            </div>
             <div class="mt-4 flex justify-end">
-                <button onclick="closeModal()" class="bg-gray-500 text-white px-4 py-2 rounded">Chiudi</button>
+                <button onclick="closeModal()" class="bg-gray-500 text-white px-4 py-2 rounded">
+                    Chiudi
+                </button>
             </div>
         </div>
     </div>
@@ -81,51 +90,59 @@
         function displayData(data) {
             const tbody = document.getElementById('reportsTable');
             tbody.innerHTML = '';
-            for (let i = 1; i < data.length; i++) {
-                const row = data[i];
-                const tr = document.createElement('tr');
-                tr.innerHTML = `
-                    <td class="px-6 py-4 whitespace-nowrap">${row[7]}</td>
-                    <td class="px-6 py-4 whitespace-nowrap">${row[1]}</td>
-                    <td class="px-6 py-4 whitespace-nowrap">${row[2]}</td>
-                    <td class="px-6 py-4 whitespace-nowrap">
-                        <button onclick="showDetails(${i}, '${row[0]}')" class="text-blue-600 hover:text-blue-900">
-                            Vedi Dettagli
-                        </button>
-                    </td>
-                    <td class="px-6 py-4 whitespace-nowrap">
-                        <button onclick="deleteReport(${i})" class="text-red-600 hover:text-red-900">
-                            Elimina
-                        </button>
-                    </td>
-                `;
-                tbody.appendChild(tr);
-            }
+            Object.keys(data).forEach(sheet => {
+                data[sheet].slice(1).forEach((row, index) => {
+                    const tr = document.createElement('tr');
+                    tr.innerHTML = `
+                        <td class="px-6 py-4 whitespace-nowrap">${row[7]}</td>
+                        <td class="px-6 py-4 whitespace-nowrap">${row[1]}</td>
+                        <td class="px-6 py-4 whitespace-nowrap">${row[2]}</td>
+                        <td class="px-6 py-4 whitespace-nowrap">
+                            <button onclick="showDetails('${sheet}', ${index})" class="text-blue-600 hover:text-blue-900">
+                                Vedi Dettagli
+                            </button>
+                        </td>
+                        <td class="px-6 py-4 whitespace-nowrap">
+                            <button onclick="deleteReport(${index})" class="text-red-600 hover:text-red-900">
+                                Elimina
+                            </button>
+                        </td>
+                    `;
+                    tbody.appendChild(tr);
+                });
+            });
         }
 
-        function showDetails(rowIndex, type) {
+        function showDetails(sheet, rowIndex) {
             const modal = document.getElementById('detailsModal');
             const modalContent = document.getElementById('modalContent');
-            const data = reportsData[rowIndex];
-            let detailsHtml = `<h3 class="text-lg font-medium leading-6 text-gray-900 mb-4">Dettagli Rapporto</h3>`;
-            
-            if (type === 'Arresto') {
-                detailsHtml += `<p><strong>Carcerato:</strong> ${data[4]}</p>
-                                <p><strong>Motivo:</strong> ${data[5]}</p>`;
-            } else if (type === 'Sequestro') {
-                detailsHtml += `<p><strong>Oggetti Sequestrati:</strong> ${data[10]}</p>`;
-            } else if (type === 'Multa') {
-                detailsHtml += `<p><strong>Importo:</strong> ${data[10]}</p>`;
-            } else if (type === 'Servizio') {
-                detailsHtml += `<p><strong>Ora Entrata:</strong> ${data[4]}</p>
-                                <p><strong>Ora Uscita:</strong> ${data[5]}</p>`;
-            }
-            modalContent.innerHTML = detailsHtml;
-            modal.classList.remove('hidden');
+            fetch('https://script.google.com/macros/s/AKfycbwua1xJ_pmCNENg92Sq83BRxmfm35OI84ZxFc8NWJoLHAlXWgoSOLHqMJXsuosN76NyeQ/exec')
+                .then(response => response.json())
+                .then(data => {
+                    const row = data[sheet][rowIndex + 1];
+                    let detailsHtml = `<h3 class='text-lg font-medium text-gray-900 mb-4'>Dettagli Rapporto</h3>`;
+                    row.forEach((cell, i) => {
+                        detailsHtml += `<p><strong>${data[sheet][0][i]}:</strong> ${cell}</p>`;
+                    });
+                    modalContent.innerHTML = detailsHtml;
+                    modal.classList.remove('hidden');
+                });
         }
 
         function closeModal() {
             document.getElementById('detailsModal').classList.add('hidden');
+        }
+
+        function applyFilters() {
+            const typeFilter = document.getElementById('typeFilter').value;
+            const dateFilter = document.getElementById('dateFilter').value;
+            loadSheetData().then(() => {
+                document.querySelectorAll('#reportsTable tr').forEach(row => {
+                    const type = row.cells[1].textContent;
+                    const date = row.cells[0].textContent;
+                    row.style.display = (typeFilter === 'all' || type === typeFilter) && (!dateFilter || date === dateFilter) ? '' : 'none';
+                });
+            });
         }
     </script>
 </body>
