--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -70,6 +70,21 @@
     </div>
 
     <script>
+        async function checkAdminAccess(username, password) {
+    try {
+        const response = await fetch('https://script.google.com/macros/s/AKfycbzB8--8kIRrK836CMn2iYLI4cN6KtRWvKIng1WJqzEioh5fbPdPA614RSNBvjt9krsX3Q/exec', {
+            method: 'POST',
+            body: new URLSearchParams({ username, password }),
+            headers: { 'Content-Type': 'application/x-www-form-urlencoded' }
+        });
+
+        const data = await response.json();
+        return data.success && data.role === 'admin'; // Controlla se il ruolo è "admin"
+    } catch (err) {
+        console.error('Errore nel controllo admin:', err);
+        return false;
+    }
+}
         document.addEventListener('DOMContentLoaded', async function() {
             if (!await checkAdminAccess()) {
                 window.location.href = 'index.html';
