--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -14,7 +14,7 @@
             <div class="flex justify-between items-center mb-6">
                 <h1 class="text-3xl font-bold">Dashboard Rapporti</h1>
                 <div class="space-x-4">
-                    <button onclick="window.location.href='index.html'" class="bg-gray-500 text-white px-4 py-2 rounded">
+                    <button onclick="window.location.href='old_index.html'" class="bg-gray-500 text-white px-4 py-2 rounded">
                         Torna Indietro
                     </button>
                 </div>
