--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -10,17 +10,13 @@
 <body class="bg-gray-100">
     <div class="min-h-screen p-8">
         <div class="max-w-7xl mx-auto">
-            <!-- Header -->
             <div class="flex justify-between items-center mb-6">
                 <h1 class="text-3xl font-bold">Dashboard Rapporti</h1>
-                <div class="space-x-4">
-                    <button onclick="window.location.href='index.html'" class="bg-gray-500 text-white px-4 py-2 rounded">
-                        Torna Indietro
-                    </button>
-                </div>
+                <button onclick="window.location.href='index.html'" class="bg-gray-500 text-white px-4 py-2 rounded">
+                    Torna Indietro
+                </button>
             </div>
 
-            <!-- Filters -->
             <div class="mb-6 flex gap-4">
                 <select id="typeFilter" class="border rounded p-2">
                     <option value="all">Tutti i tipi</option>
@@ -35,32 +31,26 @@
                 </button>
             </div>
 
-            <!-- Table -->
             <div class="bg-white rounded-lg shadow overflow-x-auto">
                 <table class="min-w-full">
                     <thead class="bg-gray-50">
                         <tr>
-                            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Data</th>
-                            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Tipo</th>
-                            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Agente</th>
-                            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Dettagli</th>
-                            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Azioni</th>
+                            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Data</th>
+                            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Tipo</th>
+                            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Agente</th>
+                            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Dettagli</th>
+                            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Azioni</th>
                         </tr>
                     </thead>
-                    <tbody id="reportsTable" class="bg-white divide-y divide-gray-200">
-                        <!-- Data will be populated here -->
-                    </tbody>
+                    <tbody id="reportsTable" class="bg-white divide-y divide-gray-200"></tbody>
                 </table>
             </div>
         </div>
     </div>
 
-    <!-- Modal for viewing details -->
     <div id="detailsModal" class="hidden fixed inset-0 bg-gray-600 bg-opacity-50 overflow-y-auto h-full w-full">
         <div class="relative top-20 mx-auto p-5 border w-96 shadow-lg rounded-md bg-white">
-            <div id="modalContent" class="mt-3">
-                <!-- Modal content will be populated here -->
-            </div>
+            <div id="modalContent" class="mt-3"></div>
             <div class="mt-4 flex justify-end">
                 <button onclick="closeModal()" class="bg-gray-500 text-white px-4 py-2 rounded">
                     Chiudi
@@ -70,23 +60,18 @@
     </div>
 
     <script>
-        // Carica i dati dal Google Script
+        let reportData = {};
+
         async function loadSheetData() {
             try {
-                const response = await fetch('https://script.google.com/macros/s/AKfycbwaSvHQQmCrMnh3TPgns1YoAqClFjAaMH6RF2joEIuvnp27IgnOUdejbvYQC1pOGIJ3uw/exec');
-                const data = await response.json();
-
-                if (data.error) {
-                    console.error('Errore durante il caricamento dei dati:', data.error);
-                } else {
-                    displayData(data);
-                }
+                const response = await fetch('https://script.google.com/macros/s/AKfycbzbr5nrGfn4O0gCPi1bZbVmXSrpk43jIuIm20sEpiN7aOoKcNxr-_0ITMiMfDYlSsCTxQ/exec');
+                reportData = await response.json();
+                displayData(reportData);
             } catch (err) {
-                console.error('Errore durante il caricamento dei dati:', err);
+                console.error('Errore nel caricamento:', err);
             }
         }
 
-        // Visualizza i dati nella tabella
         function displayData(data) {
             const tbody = document.getElementById('reportsTable');
             tbody.innerHTML = '';
@@ -95,17 +80,12 @@
                 data[type].forEach((row, index) => {
                     const tr = document.createElement('tr');
                     tr.innerHTML = `
-                        <td class="px-6 py-4 whitespace-nowrap">${row["Data"]}</td>
+                        <td class="px-6 py-4 whitespace-nowrap">${row["Data"] || '-'}</td>
                         <td class="px-6 py-4 whitespace-nowrap">${type}</td>
-                        <td class="px-6 py-4 whitespace-nowrap">${row["Nome (IGN)"]}</td>
+                        <td class="px-6 py-4 whitespace-nowrap">${row["Nome (IGN)"] || '-'}</td>
                         <td class="px-6 py-4 whitespace-nowrap">
-                            <button onclick="showDetails(${index}, '${type}')" class="text-blue-600 hover:text-blue-900">
+                            <button onclick="showDetails('${type}', ${index})" class="text-blue-600 hover:text-blue-900">
                                 Vedi Dettagli
-                            </button>
-                        </td>
-                        <td class="px-6 py-4 whitespace-nowrap">
-                            <button onclick="deleteReport(${index}, '${type}')" class="text-red-600 hover:text-red-900">
-                                Elimina
                             </button>
                         </td>
                     `;
@@ -114,51 +94,38 @@
             });
         }
 
-        // Visualizza i dettagli in un modal
-        function showDetails(index, type) {
-            const modal = document.getElementById('detailsModal');
+        function showDetails(type, index) {
+            const row = reportData[type][index];
             const modalContent = document.getElementById('modalContent');
-
-            const row = data[type][index];
             modalContent.innerHTML = `
-                <h3 class="text-lg font-medium leading-6 text-gray-900 mb-4">Dettagli Rapporto</h3>
+                <h3 class="text-lg font-medium text-gray-900 mb-4">Dettagli Rapporto</h3>
                 <p><strong>Modulo:</strong> ${row["Modulo"] || "Non disponibile"}</p>
-                <p><strong>Nome (IGN):</strong> ${row["Nome (IGN)"]}</p>
-                <p><strong>Motivo:</strong> ${row["Motivo"]}</p>
-                <p><strong>Luogo:</strong> ${row["Luogo"]}</p>
+                <p><strong>Nome:</strong> ${row["Nome (IGN)"]}</p>
+                <p><strong>Motivo:</strong> ${row["Motivo"] || "N/D"}</p>
+                <p><strong>Luogo:</strong> ${row["Luogo"] || "N/D"}</p>
                 <p><strong>Data:</strong> ${row["Data"]}</p>
-                <p><strong>Ora:</strong> ${row["Ora"]}</p>
-                <!-- Aggiungi altri campi a seconda delle necessità -->
+                <p><strong>Ora:</strong> ${row["Ora"] || "N/D"}</p>
             `;
-
-            modal.classList.remove('hidden');
+            document.getElementById('detailsModal').classList.remove('hidden');
         }
 
         function closeModal() {
             document.getElementById('detailsModal').classList.add('hidden');
         }
 
-        // Filtra i dati
         function applyFilters() {
             const typeFilter = document.getElementById('typeFilter').value;
             const dateFilter = document.getElementById('dateFilter').value;
 
-            loadSheetData().then(() => {
-                const rows = document.querySelectorAll('#reportsTable tr');
-                rows.forEach(row => {
-                    const type = row.cells[1].textContent;
-                    const date = row.cells[0].textContent;
-
-                    let showRow = true;
-                    if (typeFilter !== 'all' && type !== typeFilter) showRow = false;
-                    if (dateFilter && date !== dateFilter) showRow = false;
-
-                    row.style.display = showRow ? '' : 'none';
-                });
+            const filteredData = {};
+            Object.keys(reportData).forEach(type => {
+                if (typeFilter === 'all' || type === typeFilter) {
+                    filteredData[type] = reportData[type].filter(row => !dateFilter || row["Data"] === dateFilter);
+                }
             });
+            displayData(filteredData);
         }
 
-        // Carica i dati alla partenza
         document.addEventListener('DOMContentLoaded', loadSheetData);
     </script>
 </body>
