--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -94,6 +94,31 @@
             });
         }
 
+        // Elimina un rapporto
+async function deleteReport(index, type) {
+    const confirmDelete = confirm("Sei sicuro di voler eliminare questo rapporto?");
+    if (!confirmDelete) return;
+
+    try {
+        const response = await fetch('https://script.google.com/macros/s/AKfycbwaSvHQQmCrMnh3TPgns1YoAqClFjAaMH6RF2joEIuvnp27IgnOUdejbvYQC1pOGIJ3uw/exec', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ action: "delete", type, index })
+        });
+
+        const result = await response.json();
+        if (result.success) {
+            alert("Rapporto eliminato con successo!");
+            loadSheetData(); // Ricarica la tabella
+        } else {
+            alert("Errore durante l'eliminazione: " + result.error);
+        }
+    } catch (error) {
+        console.error("Errore:", error);
+        alert("Errore nella richiesta al server");
+    }
+}
+
         function showDetails(type, index) {
             const row = reportData[type][index];
             const modalContent = document.getElementById('modalContent');
