--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -72,27 +72,39 @@
             }
         }
 
-        function displayData(data) {
-            const tbody = document.getElementById('reportsTable');
-            tbody.innerHTML = '';
+     // Converte la data nel formato corretto
+function formatDate(isoDate) {
+    if (!isoDate) return "N/A"; // Se è vuoto, metti un valore di default
+    return isoDate.split("T")[0]; // Prende solo la parte della data
+}
 
-            Object.keys(data).forEach(type => {
-                data[type].forEach((row, index) => {
-                    const tr = document.createElement('tr');
-                    tr.innerHTML = `
-                        <td class="px-6 py-4 whitespace-nowrap">${row["Data"] || '-'}</td>
-                        <td class="px-6 py-4 whitespace-nowrap">${type}</td>
-                        <td class="px-6 py-4 whitespace-nowrap">${row["Nome (IGN)"] || '-'}</td>
-                        <td class="px-6 py-4 whitespace-nowrap">
-                            <button onclick="showDetails('${type}', ${index})" class="text-blue-600 hover:text-blue-900">
-                                Vedi Dettagli
-                            </button>
-                        </td>
-                    `;
-                    tbody.appendChild(tr);
-                });
-            });
-        }
+// Visualizza i dati nella tabella
+function displayData(data) {
+    const tbody = document.getElementById('reportsTable');
+    tbody.innerHTML = '';
+
+    Object.keys(data).forEach(type => {
+        data[type].forEach((row, index) => {
+            const tr = document.createElement('tr');
+            tr.innerHTML = `
+                <td class="px-6 py-4 whitespace-nowrap">${formatDate(row["Data"])}</td>
+                <td class="px-6 py-4 whitespace-nowrap">${type}</td>
+                <td class="px-6 py-4 whitespace-nowrap">${row["Nome (IGN)"]}</td>
+                <td class="px-6 py-4 whitespace-nowrap">
+                    <button onclick="showDetails(${index}, '${type}')" class="text-blue-600 hover:text-blue-900">
+                        Vedi Dettagli
+                    </button>
+                </td>
+                <td class="px-6 py-4 whitespace-nowrap">
+                    <button onclick="deleteReport(${index}, '${type}')" class="text-red-600 hover:text-red-900">
+                        Elimina
+                    </button>
+                </td>
+            `;
+            tbody.appendChild(tr);
+        });
+    });
+}
 
         // Elimina un rapporto
 async function deleteReport(index, type) {
