--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -64,7 +64,7 @@
 
         async function loadSheetData() {
             try {
-                const response = await fetch('https://script.google.com/macros/s/AKfycbzbr5nrGfn4O0gCPi1bZbVmXSrpk43jIuIm20sEpiN7aOoKcNxr-_0ITMiMfDYlSsCTxQ/exec');
+                const response = await fetch('https://script.google.com/macros/s/AKfycbw4WBwQ2RolwMDETAvZz9Snfqhsli_hA63dXwF6NCBc_PxiUB7WsX7SZo-fpZNhDU1FEw/exec');
                 reportData = await response.json();
                 displayData(reportData);
             } catch (err) {
@@ -72,77 +72,78 @@
             }
         }
 
-     // Converte la data nel formato corretto
-function formatDate(isoDate) {
-    if (!isoDate) return "N/A"; // Se è vuoto, metti un valore di default
-    return isoDate.split("T")[0]; // Prende solo la parte della data
-}
-
-// Visualizza i dati nella tabella
-function displayData(data) {
-    const tbody = document.getElementById('reportsTable');
-    tbody.innerHTML = '';
-
-    Object.keys(data).forEach(type => {
-        data[type].forEach((row, index) => {
-            const tr = document.createElement('tr');
-            tr.innerHTML = `
-                <td class="px-6 py-4 whitespace-nowrap">${formatDate(row["Data"])}</td>
-                <td class="px-6 py-4 whitespace-nowrap">${type}</td>
-                <td class="px-6 py-4 whitespace-nowrap">${row["Nome (IGN)"]}</td>
-                <td class="px-6 py-4 whitespace-nowrap">
-                    <button onclick="showDetails(${index}, '${type}')" class="text-blue-600 hover:text-blue-900">
-                        Vedi Dettagli
-                    </button>
-                </td>
-                <td class="px-6 py-4 whitespace-nowrap">
-                    <button onclick="deleteReport(${index}, '${type}')" class="text-red-600 hover:text-red-900">
-                        Elimina
-                    </button>
-                </td>
-            `;
-            tbody.appendChild(tr);
-        });
-    });
-}
-
-        // Elimina un rapporto
-async function deleteReport(index, type) {
-    const confirmDelete = confirm("Sei sicuro di voler eliminare questo rapporto?");
-    if (!confirmDelete) return;
-
-    try {
-        const response = await fetch('https://script.google.com/macros/s/AKfycbwaSvHQQmCrMnh3TPgns1YoAqClFjAaMH6RF2joEIuvnp27IgnOUdejbvYQC1pOGIJ3uw/exec', {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({ action: "delete", type, index })
-        });
-
-        const result = await response.json();
-        if (result.success) {
-            alert("Rapporto eliminato con successo!");
-            loadSheetData(); // Ricarica la tabella
-        } else {
-            alert("Errore durante l'eliminazione: " + result.error);
+        function formatDate(isoDate) {
+            if (!isoDate) return "N/A";
+            return isoDate.split("T")[0];
         }
-    } catch (error) {
-        console.error("Errore:", error);
-        alert("Errore nella richiesta al server");
-    }
-}
+
+        function displayData(data) {
+            const tbody = document.getElementById('reportsTable');
+            tbody.innerHTML = '';
+
+            Object.keys(data).forEach(type => {
+                data[type].forEach((row, index) => {
+                    const tr = document.createElement('tr');
+                    tr.innerHTML = `
+                        <td class="px-6 py-4 whitespace-nowrap">${formatDate(row["Data"])}</td>
+                        <td class="px-6 py-4 whitespace-nowrap">${type}</td>
+                        <td class="px-6 py-4 whitespace-nowrap">${row["Nome (IGN)"]}</td>
+                        <td class="px-6 py-4 whitespace-nowrap">
+                            <button onclick="showDetails('${type}', ${index})" class="text-blue-600 hover:text-blue-900">
+                                Vedi Dettagli
+                            </button>
+                        </td>
+                        <td class="px-6 py-4 whitespace-nowrap">
+                            <button onclick="deleteReport('${type}', ${index})" class="text-red-600 hover:text-red-900">
+                                Elimina
+                            </button>
+                        </td>
+                    `;
+                    tbody.appendChild(tr);
+                });
+            });
+        }
+
+        async function deleteReport(type, index) {
+            const confirmDelete = confirm("Sei sicuro di voler eliminare questo rapporto?");
+            if (!confirmDelete) return;
+
+            try {
+                const response = await fetch('https://script.google.com/macros/s/AKfycbw4WBwQ2RolwMDETAvZz9Snfqhsli_hA63dXwF6NCBc_PxiUB7WsX7SZo-fpZNhDU1FEw/exec', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ 
+                        action: "delete", 
+                        sheet: reportData[type][index]._sheetName, 
+                        row: reportData[type][index]._rowIndex 
+                    })
+                });
+
+                const result = await response.json();
+                if (result.success) {
+                    alert("Rapporto eliminato con successo!");
+                    loadSheetData(); // Ricarica la tabella
+                } else {
+                    alert("Errore durante l'eliminazione: " + result.error);
+                }
+            } catch (error) {
+                console.error("Errore:", error);
+                alert("Errore nella richiesta al server");
+            }
+        }
 
         function showDetails(type, index) {
             const row = reportData[type][index];
             const modalContent = document.getElementById('modalContent');
-            modalContent.innerHTML = `
-                <h3 class="text-lg font-medium text-gray-900 mb-4">Dettagli Rapporto</h3>
-                <p><strong>Modulo:</strong> ${row["Modulo"] || "Non disponibile"}</p>
-                <p><strong>Nome:</strong> ${row["Nome (IGN)"]}</p>
-                <p><strong>Motivo:</strong> ${row["Motivo"] || "N/D"}</p>
-                <p><strong>Luogo:</strong> ${row["Luogo"] || "N/D"}</p>
-                <p><strong>Data:</strong> ${row["Data"]}</p>
-                <p><strong>Ora:</strong> ${row["Ora"] || "N/D"}</p>
-            `;
+            let detailsHtml = `<h3 class="text-lg font-medium text-gray-900 mb-4">Dettagli ${type}</h3>`;
+
+            for (const [key, value] of Object.entries(row)) {
+                if (key !== '_sheetName' && key !== '_rowIndex') {
+                    detailsHtml += `<p><strong>${key}:</strong> ${value || "N/D"}</p>`;
+                }
+            }
+
+            modalContent.innerHTML = detailsHtml;
             document.getElementById('detailsModal').classList.remove('hidden');
         }
 
@@ -166,20 +167,18 @@ async function deleteReport(index, type) {
         document.addEventListener('DOMContentLoaded', loadSheetData);
     </script>
     <script>
-        // Mostra/nasconde il bottone quando si scrolla
-window.onscroll = function () {
-    const btn = document.getElementById("scrollToTopBtn");
-    if (document.documentElement.scrollTop > 200) {
-        btn.classList.remove("hidden");
-    } else {
-        btn.classList.add("hidden");
-    }
-};
+        window.onscroll = function () {
+            const btn = document.getElementById("scrollToTopBtn");
+            if (document.documentElement.scrollTop > 200) {
+                btn.classList.remove("hidden");
+            } else {
+                btn.classList.add("hidden");
+            }
+        };
 
-// Scrolla in cima
-function scrollToTop() {
-    window.scrollTo({ top: 0, behavior: "smooth" });
-}
+        function scrollToTop() {
+            window.scrollTo({ top: 0, behavior: "smooth" });
+        }
     </script>
     <button id="scrollToTopBtn" onclick="scrollToTop()" class="fixed bottom-4 right-4 bg-blue-600 text-white p-3 rounded-full shadow-lg hidden">
         ↑
