test torna indie

--- a/multa.html
+++ b/multa.html
@@ -29,6 +29,9 @@
     <img src="images/2025-02-04_22.44.27-removebg-preview.png" alt="logo smd" class="logo">
     <div class="container">
         <h1 class="text-center">Modulo Multa</h1>
+        <button onclick="window.location.href='old_index.html'" class="bg-gray-500 text-white px-4 py-2 rounded">
+            Torna Indietro
+        </button>
         <form method="post" action="" name="ModuloMulta">
             <input type="hidden" name="modulo" value="ModuloMulta">
             <h4>Compila il modulo</h4>
